--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,8 +1,12 @@
 <section>
-    <h1 class="text-center py-5">Todos los productos</h1>
+    {{#if user}}
+    <h1 class="text-center py-5">Hi, {{user.first_name}}. Welcome to Nike store</h1>
+    {{else}}
+    <h1 class="text-center py-5">Welcome to Nike store</h1>
+    {{/if}}
     <div class="container">
         <div class="row justify-content-around">
-            {{#each docs}}
+            {{#each result.docs}}
             <div class="col-4 my-3" >
                 <div class="card " style="height: 500px">
                     <img src={{this.thumbnail}} class="card-img-top" alt={{this.title}} style="height: 350px">
@@ -16,6 +20,19 @@
                 </div>
             </div>
             {{/each}}
+        </div>
+        <div class="row d-flex justify-content-around">
+            {{#if result.hasPrevPage}}
+            <a class="btn btn-primary" style="width: 150px;" href="{{result.prevLink}}">Previous page</a>
+            {{else}}
+            <button style="width: 150px;" class="btn btn-outline-primary" disabled>Previous page</button>
+            {{/if}}
+
+            {{#if result.hasNextPage}}
+            <a style="width: 150px;" class="btn btn-primary" href="{{result.nextLink}}">Next page</a>
+            {{else}}
+            <button style="width: 150px;" type="button" class="btn btn-outline-primary" disabled>Next page</button>
+            {{/if}}
         </div>
     </div>
 
